build: migrate to Gradle and backport Java 17 syntax to Java 8
- Add Gradle wrapper/build.gradle/settings.gradle to build the fork
  standalone instead of via the upstream Maven build.
- Replace pattern-matching instanceof, switch expressions, records and
  other Java 17-only syntax with Java 8-compatible equivalents so the
  plugin compiles against the same toolchain as the rest of the stack.