@@ -1,5 +1,7 @@
 package com.gmail.nossr50.util;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import java.util.List;
 import java.util.Set;
 import org.bukkit.metadata.FixedMetadataValue;
@@ -9,7 +11,7 @@ import org.jetbrains.annotations.NotNull;
  * Stores our constants related to metadata
  */
 public class MetadataConstants {
-    public static final @NotNull Set<String> MOB_METADATA_KEYS = Set.of(
+    public static final @NotNull Set<String> MOB_METADATA_KEYS = ImmutableSet.of(
             MetadataConstants.METADATA_KEY_MOB_SPAWNER_MOB,
             MetadataConstants.METADATA_KEY_EGG_MOB,
             MetadataConstants.METADATA_KEY_NETHER_PORTAL_MOB,
@@ -24,7 +26,7 @@ public class MetadataConstants {
             MetadataConstants.METADATA_KEY_DODGE_TRACKER
     );
 
-    public static final @NotNull List<String> ARROW_METADATA_KEYS = List.of(
+    public static final @NotNull List<String> ARROW_METADATA_KEYS = ImmutableList.of(
             MetadataConstants.METADATA_KEY_INF_ARROW,
             MetadataConstants.METADATA_KEY_BOW_FORCE,
             MetadataConstants.METADATA_KEY_ARROW_DISTANCE,
